--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -205,29 +205,26 @@ verbatim: |
   ##@ Deployment
 
   .PHONY: helm-manifests
-  helm-manifests: manifests kubebuilder kustomize
+  helm-manifests: kubebuilder kustomize manifests
     $(KUBEBUILDER) edit --plugins=helm/v1-alpha
     rm -rf dist/chart/templates/crd
     mkdir -p dist/chart/crds && $(KUSTOMIZE) build config/crd > dist/chart/crds/crds.yaml
     mkdir -p dist/chart/templates/configmap && cp config/configmap/configmap.yaml dist/chart/templates/configmap/configmap.yaml
     mkdir -p dist/chart/templates/secret && cp config/secret/secret.yaml dist/chart/templates/secret/secret.yaml
 
-  .PHONY: helm-set-image
-  helm-set-image: manifests
-    yq -i '.controllerManager.container.image.repository = "$(IMG_REPO)"' dist/chart/values.yaml
-    yq -i '.controllerManager.container.image.tag = "$(IMG_TAG)"' dist/chart/values.yaml
-
   .PHONY: helm-lint
-  helm-lint: helm manifests
-    helm lint dist/chart
+  helm-lint: helm helm-manifests
+    $(HELM) lint dist/chart
 
   .PHONY: helm-build-local-image
-  helm-build-local-image: helm manifests
-    helm template dist/chart > dist/manifest.yaml
+  helm-build-local-image: helm-lint
+    $(HELM) template dist/chart > dist/manifest.yaml
 
   .PHONY: helm-build
-  helm-build: helm helm-set-image
-    helm template dist/chart > dist/manifest.yaml
+  helm-build: helm-lint
+    yq -i '.controllerManager.container.image.repository = "$(IMG_REPO)"' dist/chart/values.yaml
+    yq -i '.controllerManager.container.image.tag = "$(IMG_TAG)"' dist/chart/values.yaml
+    $(HELM) template dist/chart > dist/manifest.yaml
 
   .PHONY: install-crd
   install-crd: manifests kustomize ## Install CRDs into the K8s cluster specified in ~/.kube/config.
