--- a/config/secret/secret.yaml
+++ b/config/secret/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: secret
 type: Opaque
 stringData:
-  credentials.json: {{ toJson .Values.credentials | quote }}
+  credentials.json: '{{ toJson .Values.credentials }}'
