--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: SAP SE or an SAP affiliate company
+# SPDX-FileCopyrightText: SAP SE
 # SPDX-License-Identifier: Apache-2.0
 
 root = true
