--- a/config/configmap/configmap.yaml
+++ b/config/configmap/configmap.yaml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: config
 data:
-  config.json: {{ toJson .Values.config | quote }}
+  config.json: '{{ toJson .Values.config}}'
