--- a/config/samples/argora_v1alpha1_update.yaml
+++ b/config/samples/argora_v1alpha1_update.yaml
@@ -8,6 +8,6 @@ metadata:
   namespace: argora-system
 spec:
   clusters:
-  - name: cc-b0-qa-de-1
-    region:
-    type:
+  - name: "cc-b0-qa-de-1"
+    region: "qa-de-1"
+    type: "cc-kvm-compute,cc-kvm-admin"
