--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -223,12 +223,14 @@ verbatim: |
   .PHONY: helm-build-local-image
   helm-build-local-image: helm-lint
     $(HELM) template dist/chart > dist/install.yaml
+    cat dist/chart/crds/crds.yaml >> dist/install.yaml
 
   .PHONY: helm-build
   helm-build: helm-lint
     yq -i '.controllerManager.container.image.repository = "$(IMG_REPO)"' dist/chart/values.yaml
     yq -i '.controllerManager.container.image.tag = "$(IMG_TAG)"' dist/chart/values.yaml
     $(HELM) template dist/chart > dist/install.yaml
+    cat dist/chart/crds/crds.yaml >> dist/install.yaml
 
   .PHONY: install-crd
   install-crd: manifests kustomize ## Install CRDs into the K8s cluster specified in ~/.kube/config.
