--- a/.github/workflows/test-chart.yml
+++ b/.github/workflows/test-chart.yml
@@ -1,7 +1,6 @@
 name: Test Chart
 
 on:
-  push:
   pull_request:
 
 jobs:
@@ -42,8 +41,8 @@ jobs:
       - name: Verify Helm installation
         run: helm version
 
-      - name: Make Helm manifests
-        run: make helm-manifests
+      - name: Make Helm chart
+        run: make helm-chart
 
       - name: Lint Helm Chart
         run: |
