--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -17,6 +17,12 @@ rules:
   - update
   - watch
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - get
+- apiGroups:
   - argora.cloud.sap
   resources:
   - updates
