--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -218,17 +218,22 @@ verbatim: |
   helm-lint: helm helm-chart
     $(HELM) lint dist/chart
 
-  .PHONY: helm-build-local-image
-  helm-build-local-image: helm-lint
-    $(HELM) template dist/chart > dist/install.yaml
-    cat dist/chart/crds/crds.yaml >> dist/install.yaml
-
-  .PHONY: helm-build
-  helm-build: helm-lint
+  .PHONY: set-image
+  set-image:
     yq -i '.controllerManager.container.image.repository = "$(IMG_REPO)"' dist/chart/values.yaml
     yq -i '.controllerManager.container.image.tag = "$(IMG_TAG)"' dist/chart/values.yaml
+
+  .PHONY: build-install
+  build-install:
+    kustomize build config/default | yq ea 'select(.kind == "ConfigMap")' > dist/chart/templates/configmap.yaml
+    kustomize build config/default | yq ea 'select(.kind == "Secret")' > dist/chart/templates/secret.yaml
     $(HELM) template dist/chart > dist/install.yaml
-    cat dist/chart/crds/crds.yaml >> dist/install.yaml
+
+  .PHONY: helm-build-local-image
+  helm-build-local-image: helm-lint build-install
+
+  .PHONY: helm-build
+  helm-build: set-image helm-lint build-install
 
   .PHONY: install-crd
   install-crd: manifests kustomize ## Install CRDs into the K8s cluster specified in ~/.kube/config.
