--- a/config/samples/argora_v1alpha1_update.yaml
+++ b/config/samples/argora_v1alpha1_update.yaml
@@ -10,4 +10,4 @@ spec:
   clusters:
   - name: "cc-b0-qa-de-1"
     region: "qa-de-1"
-    type: "cc-kvm-compute,cc-kvm-admin"
+    type: "cc-kvm-compute"
