--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -3,7 +3,7 @@
 # Edit Makefile.maker.yaml instead.                                            #
 ################################################################################
 
-# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company
+# SPDX-FileCopyrightText: 2024 SAP SE
 # SPDX-License-Identifier: Apache-2.0
 
 name: Checks
@@ -49,6 +49,6 @@ jobs:
           ignore: importas
           reporter: github-check
       - name: Check if source code files have license header
-        run: make check-addlicense
+        run: make check-license-headers
       - name: REUSE Compliance Check
         uses: fsfe/reuse-action@v5
