--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -213,6 +213,8 @@ verbatim: |
   .PHONY: helm-chart
   helm-chart: kubebuilder kustomize manifests
     $(KUBEBUILDER) edit --plugins=helm/v1-alpha
+    kustomize build config/default | yq ea 'select(.kind == "ConfigMap")' > dist/chart/templates/configmap/configmap.yaml
+    kustomize build config/default | yq ea 'select(.kind == "Secret")' > dist/chart/templates/secret/secret.yaml
 
   .PHONY: helm-lint
   helm-lint: helm helm-chart
@@ -224,17 +226,15 @@ verbatim: |
     yq -i '.controllerManager.container.image.tag = "$(IMG_TAG)"' dist/chart/values.yaml
 
   .PHONY: prepare-deploy
-  prepare-deploy:
-    kustomize build config/default | yq ea 'select(.kind == "ConfigMap")' > dist/chart/templates/configmap.yaml
-    kustomize build config/default | yq ea 'select(.kind == "Secret")' > dist/chart/templates/secret.yaml
+  prepare-deploy: helm-chart helm-lint
     $(HELM) template -n argora-system dist/chart > dist/install.yaml
     kubectl create namespace argora-system || true
 
   .PHONY: helm-build-local-image
-  helm-build-local-image: prepare-deploy helm-lint
+  helm-build-local-image: prepare-deploy
 
   .PHONY: helm-build
-  helm-build: set-image prepare-deploy helm-lint
+  helm-build: set-image prepare-deploy
 
   .PHONY: install-crd
   install-crd: manifests kustomize ## Install CRDs into the K8s cluster specified in ~/.kube/config.
