--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -214,7 +214,9 @@ verbatim: |
   helm-chart: kubebuilder kustomize manifests
     $(KUBEBUILDER) edit --plugins=helm/v1-alpha
     kustomize build config/default | yq ea 'select(.kind == "ConfigMap")' > dist/chart/templates/configmap/configmap.yaml
+    yq -i '.metadata.namespace="{{ .Release.Namespace }}"' dist/chart/templates/configmap/configmap.yaml
     kustomize build config/default | yq ea 'select(.kind == "Secret")' > dist/chart/templates/secret/secret.yaml
+    yq -i '.metadata.namespace="{{ .Release.Namespace }}"' dist/chart/templates/secret/secret.yaml
 
   .PHONY: helm-lint
   helm-lint: helm helm-chart
@@ -222,8 +224,8 @@ verbatim: |
 
   .PHONY: set-image
   set-image:
-    yq -i '.controllerManager.container.image.repository = "$(IMG_REPO)"' dist/chart/values.yaml
-    yq -i '.controllerManager.container.image.tag = "$(IMG_TAG)"' dist/chart/values.yaml
+    yq -i '.controllerManager.container.image.repository="$(IMG_REPO)"' dist/chart/values.yaml
+    yq -i '.controllerManager.container.image.tag="$(IMG_TAG)"' dist/chart/values.yaml
 
   .PHONY: prepare-deploy
   prepare-deploy: helm-chart helm-lint
