--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - argora_v1alpha1_update.yaml
+- argora_v1alpha1_ironcore.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
