--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -67,9 +67,9 @@ reuse:
 verbatim: |
   tilt: FORCE helm-build-local-image
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE)
-  
+
   tilt-debug: FORCE helm-build-local-image
-	  tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE) --TARGET debug
+    tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE) --TARGET debug
 
   ##@ kubebuilder
 
@@ -206,7 +206,7 @@ verbatim: |
     rm Dockerfile.cross
 
   .PHONY: build-installer
-  build-installer: manifests generate kustomize ## Generate a consolidated YAML with CRDs and deployment.
+  build-installer: kustomize generate manifests license-headers
     mkdir -p dist
     cd config/manager && $(KUSTOMIZE) edit set image controller=${IMG}
     $(KUSTOMIZE) build config/default > dist/install.yaml
