--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -43,6 +43,8 @@ spec:
         args:
           - --leader-elect
           - --health-probe-bind-address=:8081
+          #- --enable-ironcore=false
+          #- --netbox-url=https://netbox-test.global.cloud.sap
           #- --zap-log-level=debug
         image: controller:latest #"{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: manager
