--- a/config/samples/argora_v1alpha1_clusterimport.yaml
+++ b/config/samples/argora_v1alpha1_clusterimport.yaml
@@ -1,10 +1,10 @@
 apiVersion: argora.cloud.sap/v1alpha1
-kind: IronCore
+kind: ClusterImport
 metadata:
   labels:
     app.kubernetes.io/name: argora
     app.kubernetes.io/managed-by: kustomize
-  name: ironcore-sample
+  name: clusterimport-sample
   namespace: argora-system
 spec:
   clusters:
