Refactor ConfigMap into ClusterImport CR (#82)
* Initial

* Fix lint

* Fix tests

* get rid of the configmap

* fix test

* update

* Update

* rbac

* rbac #2

* params

* diagram update

* ironcore reconcile interval

* tests

* set status on errors

* rename

* licenses

* remove old crd files

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -67,9 +67,9 @@ reuse:
 verbatim: |
   tilt: FORCE helm-build-local-image
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE)
-  
+
   tilt-debug: FORCE helm-build-local-image
-	  tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE) --TARGET debug
+    tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE) --TARGET debug
 
   ##@ kubebuilder
 
@@ -206,7 +206,7 @@ verbatim: |
     rm Dockerfile.cross
 
   .PHONY: build-installer
-  build-installer: manifests generate kustomize ## Generate a consolidated YAML with CRDs and deployment.
+  build-installer: kustomize generate manifests license-headers
     mkdir -p dist
     cd config/manager && $(KUSTOMIZE) edit set image controller=${IMG}
     $(KUSTOMIZE) build config/default > dist/install.yaml
@@ -216,8 +216,6 @@ verbatim: |
   .PHONY: helm-chart
   helm-chart: kubebuilder kustomize manifests
     "$(KUBEBUILDER)" edit --plugins=helm/v1-alpha
-    kustomize build config/default | yq ea 'select(.kind == "ConfigMap")' > dist/chart/templates/configmap/configmap.yaml
-    yq -i '.metadata.namespace="{{ .Release.Namespace }}"' dist/chart/templates/configmap/configmap.yaml
     kustomize build config/default | yq ea 'select(.kind == "Secret")' > dist/chart/templates/secret/secret.yaml
     yq -i '.metadata.namespace="{{ .Release.Namespace }}"' dist/chart/templates/secret/secret.yaml
 
