--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,7 +7,13 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - configmaps
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
   - secrets
   verbs:
   - create
@@ -18,13 +24,6 @@ rules:
   - update
   - watch
 - apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
-  - patch
-- apiGroups:
   - apiextensions.k8s.io
   resources:
   - customresourcedefinitions
@@ -33,6 +32,7 @@ rules:
 - apiGroups:
   - argora.cloud.sap
   resources:
+  - clusterimports
   - updates
   verbs:
   - create
@@ -45,12 +45,14 @@ rules:
 - apiGroups:
   - argora.cloud.sap
   resources:
+  - clusterimports/finalizers
   - updates/finalizers
   verbs:
   - update
 - apiGroups:
   - argora.cloud.sap
   resources:
+  - clusterimports/status
   - updates/status
   verbs:
   - get
