Add `IPPoolImport` to create IPPools from Netbox

--- a/.typos.toml
+++ b/.typos.toml
@@ -3,8 +3,13 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [default.extend-words]
+Adress = "Adress"
+HPE = "HPE"
+Reponse = "Reponse"
+nd = "nd"
 
 [files]
 extend-exclude = [
   "go.mod",
+  "hack/**",
 ]
