--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -63,6 +63,16 @@ reuse:
       SPDX-FileCopyrightText: SAP SE
       SPDX-License-Identifier: Apache-2.0
 
+typos:
+  enabled: true
+  extendExcludes:
+    - hack/**
+  extendWords:
+    nd: nd
+    HPE: HPE
+    Reponse: Reponse # typo in the module
+    Adress: Adress # typo in the module
+
 verbatim: |
   tilt: FORCE helm-build-local-image
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE)
