--- a/config/crd/bases/argora.cloud.sap_ippoolimports.yaml
+++ b/config/crd/bases/argora.cloud.sap_ippoolimports.yaml
@@ -46,6 +46,10 @@ spec:
               ippools:
                 items:
                   properties:
+                    excludeAddresses:
+                      items:
+                        type: string
+                      type: array
                     excludeMask:
                       type: integer
                     namePrefix:
