--- a/config/crd/bases/argora.cloud.sap_ippoolimports.yaml
+++ b/config/crd/bases/argora.cloud.sap_ippoolimports.yaml
@@ -46,12 +46,12 @@ spec:
               ippools:
                 items:
                   properties:
-                    excludeAddresses:
+                    excludeMask:
+                      type: integer
+                    excludedAddresses:
                       items:
                         type: string
                       type: array
-                    excludeMask:
-                      type: integer
                     namePrefix:
                       type: string
                     region:
