include `ippoolimports` crd in kustomization

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,3 +4,4 @@
 resources:
 - bases/argora.cloud.sap_updates.yaml
 - bases/argora.cloud.sap_clusterimports.yaml
+- bases/argora.cloud.sap_ippoolimports.yaml
