Introduce new controller to watch CAPI IPAddresses and bump CAPI to v1.12.2
New controller to manages the lifecycle of IPAM IPAddresses in NetBox.
The controller ensures that IP address configurations in Kubernetes are
kept in sync with their corresponding entries in NetBox. On deletion,
it cleans up the associated NetBox resources before removing the finalizer.

Co-authored-by: Valeryia Hurynovich <v.hurynovich@sap.com>
Co-authored-by: Anton Paulovich <a.paulovich@sap.com>
Co-authored-by: Aliaksei Dziauho <a.dziauho@sap.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -109,6 +109,11 @@ linters:
     revive:
       rules:
         - name: comment-spacings
+        - name: dot-imports
+          arguments:
+          - allowed-packages: 
+            - github.com/onsi/ginkgo/v2
+            - github.com/onsi/gomega
     staticcheck:
       dot-import-whitelist:
         - github.com/onsi/ginkgo/v2
