--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -74,10 +74,13 @@ typos:
     Adress: Adress # typo in the module
 
 verbatim: |
-  tilt: FORCE helm-build-local-image
+  kind-up:
+    kind get clusters | grep kind || kind create cluster -n kind
+
+  tilt: FORCE generate helm-build-local-image kind-up
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE)
 
-  tilt-debug: FORCE helm-build-local-image
+  tilt-debug: FORCE generate helm-build-local-image kind-up
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE) --TARGET debug
 
   ##@ kubebuilder
@@ -282,12 +285,12 @@ verbatim: |
 
   ## Tool Versions
   KUSTOMIZE_VERSION ?= v5.5.0
-  CONTROLLER_TOOLS_VERSION ?= v0.17.1
+  CONTROLLER_TOOLS_VERSION ?= v0.20.0
   #ENVTEST_VERSION is the version of controller-runtime release branch to fetch the envtest setup script (i.e. release-0.20)
   ENVTEST_VERSION ?= $(shell go list -m -f "{{ .Version }}" sigs.k8s.io/controller-runtime | awk -F'[v.]' '{printf "release-%d.%d", $$2, $$3}')
   #ENVTEST_K8S_VERSION is the version of Kubernetes to use for setting up ENVTEST binaries (i.e. 1.31)
   ENVTEST_K8S_VERSION ?= $(shell go list -m -f "{{ .Version }}" k8s.io/api | awk -F'[v.]' '{printf "1.%d", $$3}')
-  GOLANGCI_LINT_VERSION ?= v1.63.4
+  GOLANGCI_LINT_VERSION ?= v2.8.0
   HELM_VERSION ?= v3.17.0
   KUBEBUILDER_VERSION ?= v4.5.1
 
@@ -317,7 +320,7 @@ verbatim: |
   .PHONY: golangci-lint
   golangci-lint: $(GOLANGCI_LINT) ## Download golangci-lint locally if necessary.
   $(GOLANGCI_LINT): $(LOCALBIN)
-    $(call go-install-tool,$(GOLANGCI_LINT),github.com/golangci/golangci-lint/cmd/golangci-lint,$(GOLANGCI_LINT_VERSION))
+    $(call go-install-tool,$(GOLANGCI_LINT),github.com/golangci/golangci-lint/v2/cmd/golangci-lint,$(GOLANGCI_LINT_VERSION))
 
   .PHONY: helm
   helm: $(HELM)
