--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -74,10 +74,13 @@ typos:
     Adress: Adress # typo in the module
 
 verbatim: |
-  tilt: FORCE helm-build-local-image
+  kind-up:
+    kind get clusters | grep kind || kind create cluster -n kind
+
+  tilt: FORCE helm-build-local-image kind-up
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE)
 
-  tilt-debug: FORCE helm-build-local-image
+  tilt-debug: FORCE helm-build-local-image kind-up
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE) --TARGET debug
 
   ##@ kubebuilder
