--- a/config/crd/bases/argora.cloud.sap_ippoolimports.yaml
+++ b/config/crd/bases/argora.cloud.sap_ippoolimports.yaml
@@ -48,6 +48,8 @@ spec:
                   description: IPPoolSelector defines the selection criteria for an
                     IP pool to be imported.
                   properties:
+                    excludeLastNAddresses:
+                      type: integer
                     excludeMask:
                       type: integer
                     excludedAddresses:
