delete unneeded file

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ Dockerfile.cross
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# macOS files
+*.DS_Store
+
 # Go workspace file
 go.work
 
