--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -30,6 +30,8 @@ jobs:
         with:
           check-latest: true
           go-version: 1.25.7
+      - name: Run prepare make target
+        run: make generate setup-envtest
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v9
         with:
