--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,8 @@ jobs:
         with:
           check-latest: true
           go-version: 1.25.7
+      - name: Run prepare make target
+        run: make generate setup-envtest
       - name: Build all binaries
         run: make build-all
   code_coverage:
@@ -66,6 +68,8 @@ jobs:
         with:
           check-latest: true
           go-version: 1.25.7
+      - name: Run prepare make target
+        run: make generate setup-envtest
       - name: Run tests and generate coverage report
         run: make build/cover.out
       - name: Archive code coverage results
