--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -33,6 +33,8 @@ jobs:
         with:
           check-latest: true
           go-version: 1.25.7
+      - name: Run prepare make target
+        run: make generate setup-envtest
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
