--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -81,10 +81,10 @@ verbatim: |
   kind-up:
     kind get clusters | grep kind || kind create cluster -n kind
 
-  tilt: FORCE manifests generate license-headers helm-build-local-image kind-up
+  tilt: FORCE generate license-headers helm-build-local-image kind-up
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE)
 
-  tilt-debug: FORCE manifests generate license-headers helm-build-local-image kind-up
+  tilt-debug: FORCE generate license-headers helm-build-local-image kind-up
     tilt up --stream -- --BININFO_VERSION $(BININFO_VERSION) --BININFO_COMMIT_HASH $(BININFO_COMMIT_HASH) --BININFO_BUILD_DATE $(BININFO_BUILD_DATE) --TARGET debug
 
   ##@ kubebuilder
@@ -243,9 +243,9 @@ verbatim: |
     yq -i '.controllerManager.container.image.tag="$(IMG_TAG)"' dist/chart/values.yaml
 
   .PHONY: prepare-deploy
-  prepare-deploy: helm-chart helm-lint
+  prepare-deploy: helm-chart helm-lint install-crd
     "$(HELM)" template -n argora-system dist/chart > dist/install.yaml
-    kubectl create namespace argora-system || true
+    "$(KUBECTL)" create namespace argora-system || true
 
   .PHONY: helm-build-local-image
   helm-build-local-image: prepare-deploy
